--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,30 +1,35 @@
-monitor=eDP-1, 1920x1080@144hz,auto,1
+# Monitors are handled via an external script
+exec-once = ~/.config/hypr/monitors.sh
+
+source = ~/.config/hypr/monitors.conf
+source = ~/.config/hypr/gpu.conf
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = thunar
+$fileManager = nautilus
 $menu = ~/.config/rofi/launchers/type-1/launcher.sh
 
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = dunst
-exec-once = exec-once = systemctl --user start hyprpolkitagent
+exec-once = systemctl --user start hyprpolkitagent
 exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'WhiteSur-Dark-red'
 exec-once = gsettings set org.gnome.desktop.interface icon-theme 'Papirus-Dark'
-exec = /home/karlokolac/code/go/go-notebook/script.sh
 
 env = HYPRCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,WhiteSur-cursors
 env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,WhiteSur-cursors
-env = GTK_THEME,WhiteSur-Dark-blue
+env = GTK_THEME,WhiteSur-Dark-red
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 general {
     gaps_in = 2
     gaps_out = 5
     border_size = 2
-    col.active_border = rgb(e46876)
+    col.active_border = rgb(72a7bc)
     resize_on_border = false
     allow_tearing = false
     layout = dwindle
@@ -72,15 +77,15 @@ master {
 }
 
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 input {
-    kb_layout = us
-    kb_variant =
+    kb_layout = us,hr
+    kb_variant = 
     kb_model =
-    kb_options =
+    kb_options = grp:alt_shift_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -93,7 +98,7 @@ input {
 }
 
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
 }
 
 device {
@@ -116,7 +121,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, C, togglesplit, # dwindle
-bind = $mainMod SHIFT, C, exec, pkill waybar && waybar & disown
+bind = $mainMod SHIFT, C, exec, pkill waybar || waybar
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy
 
 # Move focus with mainMod + arrow keys
@@ -166,11 +171,10 @@ bindm = $mainMod, mouse:273, resizewindow
 windowrule = tile,^(kitty)$
 
 # Turn down opacity of apps
-# windowrulev2 = opacity 0.95 0.95, class:^(kitty)$
-# windowrulev2 = opacity 0.9 0.9, class:^(firefox)$
+# windowrulev2 = opacity 0.9 0.9, class:^(kitty)$
+# windowrulev2 = opacity 0.9 0.9, class:^(dev.zed.Zed)$
 # windowrulev2 = opacity 0.9 0.9, class:^(discord)$
 # windowrulev2 = opacity 0.9 0.9, class:^(org.gnome.Nautilus)$
-# windowrulev2 = opacity 0.95 0.95, class:^(Code)$
 
 # Make certain apps always open in a specific workspace
 # windowrule = workspace 1, ^(kitty)$
