--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload=/home/karlokolac/Pictures/demon_girl.jpeg
-wallpaper=,/home/karlokolac/Pictures/demon_girl.jpeg
+preload=/home/karlokolac/Pictures/anime-moon-landscape.jpg
+wallpaper=,/home/karlokolac/Pictures/anime-moon-landscape.jpg
