--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -26,10 +26,10 @@ catppuccin2 = #cdd6f4
 catppuccin1 = #cba6f7
 catppuccin3 = #f38ba8
 
-ayu0 = #181616
+ayu0 = #1f1f28
 ayu2 = #e6c384
 ayu3 = #c5c9c5
-ayu1 = #e46876
+ayu1 = #c5c9c5
 
 [bar/myBar]
 bottom		 = false
