--- a/i3/config
+++ b/i3/config
@@ -1,39 +1,32 @@
-# Set the MOD key to be the Windows key
 set $mod Mod4
 
-# Font for window titles
 font pango:monospace 8
 
-# starts with these apps
 exec --no-startup-id autorandr docked &
 exec_always --no-startup-id picom &
 exec_always --no-startup-id dunst &
 exec --no-startup-id dex --autostart --environment i3 &
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork &
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh &
-exec_always --no-startup-id feh --no-fehbg --bg-scale $HOME/Pictures/demon_girl.jpeg &
+exec_always --no-startup-id feh --no-fehbg --bg-scale $HOME/Pictures/pexels-eberhardgross-12486830.jpg &
 exec_always --no-startup-id xinput set-prop "12" "libinput Accel Profile Enabled" 0 1 0 &
 exec_always --no-startup-id xinput set-prop "17" "libinput Accel Profile Enabled" 0 1 0 &
 exec_always --no-startup-id setxkbmap -option 'grp:win_space_toggle' us,hr &
-exec_always --no-startup-id $HOME/code/go/practice/go-notebook/script.sh &
 
 exec --no-startup-id gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark' &
 exec --no-startup-id gsettings set org.gnome.desktop.interface gtk-theme 'WhiteSur-Dark-blue' &
 exec --no-startup-id gsettings set org.gnome.desktop.interface icon-theme 'Papirus-Dark' &
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 
-gaps inner 4
-gaps outer 2
+gaps inner 2
+gaps outer 1
 
-#border width
-for_window [class=".*"] border pixel 2
+for_window [class=".*"] border pixel 0
 
-#border colors
-client.focused #e46876 #e46876 #e46876 #e46876 #e46876
-client.focused_inactive #e46876 #e46876 #e46876 #e46876 #e46876
+client.focused #c5c9c5 #c5c9c5 #c5c9c5 #c5c9c5 #c5c9c5
+client.focused_inactive #c5c9c5 #c5c9c5 #c5c9c5 #c5c9c5 #c5c9c5
 client.unfocused #181616 #181616 #181616 #181616 #181616
 
-# Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
@@ -43,11 +36,8 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10% && $refrash_i3status
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%- && $refresh_i3status
 
-# Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# move tiling windows via drag & drop by left-clicking into the title bar,
-# or left-clicking anywhere into the window while holding the floating modifier.
 tiling_drag modifier titlebar
 
 bindsym $mod+Return exec kitty
@@ -56,58 +46,38 @@ bindsym $mod+d exec --no-startup-id ~/.config/rofi/launchers/type-1/launcher.sh
 bindsym $mod+e exec thunar
 bindsym $mod+f exec zen-browser
 
-# change focus
 bindsym $mod+j focus left
 bindsym $mod+k focus down
 bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
 
-# alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-# move focused window
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
 bindsym $mod+Shift+semicolon move right
 
-# alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
 bindsym $mod+h split h
 
-# split in vertical orientation
 bindsym $mod+v split v
 
-# enter fullscreen mode for the focused container
 bindsym $mod+Shift+f fullscreen toggle
 
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+p layout toggle split
-
-# toggle tiling / floating
 bindsym $mod+r floating toggle
 
-# change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
 
-# focus the parent container
 bindsym $mod+a focus parent
 
-# focus the child container
-#bindsym $mod+d focus child
-
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -119,7 +89,6 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
@@ -131,7 +100,6 @@ bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
-# move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
@@ -143,11 +111,8 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# reload the configuration file
 bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec ~/.config/rofi/powermenu/type-2/powermenu.sh
 bindsym $mod+Shift+s exec flameshot gui
 
@@ -156,26 +121,18 @@ bindsym $mod+Shift+o exec autorandr laptop-only
 
 
 bindsym $mod+Shift+h mode "resize"
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
+mode "resize" {
         bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize shrink height 10 px or 10 ppt
         bindsym semicolon resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
         bindsym Down resize grow height 10 px or 10 ppt
         bindsym Up resize shrink height 10 px or 10 ppt
         bindsym Right resize grow width 10 px or 10 ppt
 
-        # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
         bindsym $mod+r mode "default"
