--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,9 @@
 font_size               11
+font_weight             normal
 confirm_os_window_close 0
 cursor_shape            block
 shell_integration       no-cursor
-# background_opacity		0.95
+# background_opacity		0.90
 
 # BEGIN_KITTY_THEME
 # Kanagawa_dragon
@@ -16,3 +17,7 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTS
+
+# modify_font cell_height 1.2
+# modify_font cell_width 95%
+# text_composition_strategy legacy
