--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -32,6 +32,6 @@ blur: {
 
 opacity-rule = [
 	"90:class_g = 'kitty'",
-	"90:class_g = 'Thunar'",
-	# "90:class_g = 'dev.zed.Zed'",
+	# "90:class_g = 'Thunar'",
+	"90:class_g = 'dev.zed.Zed'",
 ]; 
