--- a/zed/settings.json
+++ b/zed/settings.json
@@ -1,76 +1,91 @@
 {
-  "terminal": {
-    "dock": "bottom"
-  },
-  "collaboration_panel": {
-    "dock": "right"
-  },
-  "outline_panel": {
-    "dock": "right"
-  },
-  "project_panel": {
-    "dock": "right"
-  },
-
-  "base_keymap": "VSCode",
-
-  "assistant": {
-    "dock": "left",
-    "default_model": {
-      "provider": "copilot_chat",
-      "model": "claude-3-5-sonnet"
+    "icon_theme": "VSCode Icons (Dark)",
+    "terminal": {
+        "dock": "bottom"
     },
-    "version": "2"
-  },
-  "show_inline_completions": true,
+    "collaboration_panel": {
+        "dock": "right"
+    },
+    "outline_panel": {
+        "dock": "right"
+    },
+    "project_panel": {
+        "dock": "right"
+    },
 
-  "telemetry": {
-    "diagnostics": false,
-    "metrics": false
-  },
+    "base_keymap": "VSCode",
 
-  "vim_mode": true,
-  "relative_line_numbers": true,
+    "assistant": {
+        "dock": "left",
+        "default_model": {
+            "provider": "copilot_chat",
+            "model": "claude-3-7-sonnet"
+        },
+        "version": "2"
+    },
+    "show_edit_predictions": true,
 
-  "theme": {
-    "mode": "dark",
-    "light": "One Light",
-    "dark": "Kanagawa Dragon"
-  },
+    "telemetry": {
+        "diagnostics": false,
+        "metrics": false
+    },
 
-  "experimental.theme_overrides": {
-    "syntax": {
-      "keyword": {
-        "font_style": "normal"
-      },
-      "function": {
-        "font_style": "normal"
-      }
+    "vim_mode": true,
+    "relative_line_numbers": true,
+
+    "theme": "Kanagawa Dragon",
+
+    "experimental.theme_overrides": {
+        "syntax": {
+            "keyword": {
+                "font_style": "normal"
+            },
+            "function": {
+                "font_style": "normal"
+            },
+            "comment": {
+                "font_style": "normal"
+            }
+        }
+    },
+
+    "autosave": "on_focus_change",
+
+    "buffer_font_family": "JetBrainsMono Nerd Font",
+    "ui_font_size": 16,
+    "buffer_font_size": 14,
+
+    "tab_size": 4,
+    "languages": {
+        "Markdown": {
+            "show_edit_predictions": false
+        },
+        "LaTeX": {
+            "show_edit_predictions": false
+        },
+        "HTML": {
+            "tab_size": 2,
+            "formatter": "language_server"
+        }
+    },
+
+    "current_line_highlight": "none",
+
+    "indent_guides": {
+        "enabled": false
+    },
+
+    "tab_bar": {
+        "show": false
+    },
+
+    "toolbar": {
+        "breadcrumbs": false,
+        "quick_actions": false,
+        "selections_menu": false
+    },
+
+    "scrollbar": {
+        "show": "never"
     }
-  },
-  "autosave": "on_focus_change",
-
-  "buffer_font_family": "JetBrainsMono Nerd Font",
-  "ui_font_size": 16,
-  "buffer_font_size": 14,
-
-  "current_line_highlight": "none",
-
-  "indent_guides": {
-    "enabled": false
-  },
-
-  "tab_bar": {
-    "show": true
-  },
-
-  "toolbar": {
-    "breadcrumbs": false,
-    "quick_actions": false,
-    "selections_menu": false
-  },
-
-  "scrollbar": {
-    "show": "never"
-  }
 }
